[gd_scene load_steps=11 format=3 uid="uid://cm0bskbolcs8f"]

[ext_resource type="Theme" uid="uid://cmkvf640kg8dk" path="res://Themes/Budget_page.tres" id="1_yo843"]
[ext_resource type="Script" path="res://Scene/edit_entry_box.gd" id="2_0t3w7"]
[ext_resource type="StyleBox" uid="uid://b2wjdb8kuqyc4" path="res://Themes/Panel/entry_box.tres" id="2_00t45"]
[ext_resource type="Texture2D" uid="uid://c1es8kofius06" path="res://Assets/UI/Exclamation.png" id="4_tn71h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b11fa"]
bg_color = Color(0.831373, 0.27451, 0.0235294, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="AtlasTexture" id="AtlasTexture_idd87"]
atlas = ExtResource("4_tn71h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6j1w"]
atlas = ExtResource("4_tn71h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_endjo"]
atlas = ExtResource("4_tn71h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1g4"]
atlas = ExtResource("4_tn71h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f3jsw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idd87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6j1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_endjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1g4")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="EditEntryBox" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 128.0
offset_right = 476.0
offset_bottom = 756.0
grow_horizontal = 2
theme = ExtResource("1_yo843")
theme_override_styles/panel = ExtResource("2_00t45")
script = ExtResource("2_0t3w7")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = ""
size = Vector2i(500, 164)
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="Bottom Panel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -416.0
offset_top = -214.0
offset_right = 416.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13

[node name="Apply" type="Button" parent="Bottom Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="Delete" type="Button" parent="Bottom Panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_b11fa")
text = "Delete"

[node name="Cancel" type="Button" parent="Bottom Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Middle Panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -100.0
offset_right = 416.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Value" type="LineEdit" parent="Middle Panel"]
layout_mode = 2

[node name="Type" type="OptionButton" parent="Middle Panel"]
layout_mode = 2

[node name="Top Panel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -416.0
offset_top = 36.0
offset_right = 416.0
offset_bottom = 220.0
grow_horizontal = 2

[node name="Title" type="LineEdit" parent="Top Panel"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "Title"

[node name="PopupPanel" type="PopupPanel" parent="."]

[node name="Exclamation Value" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(920, 252)
sprite_frames = SubResource("SpriteFrames_f3jsw")

[node name="Exclamation Title" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(920, 68)
sprite_frames = SubResource("SpriteFrames_f3jsw")

[connection signal="pressed" from="Bottom Panel/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Bottom Panel/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Bottom Panel/Cancel" to="." method="_on_cancel_pressed"]
